# shagger

./: README.md  docker-compose.yaml  pyproject.toml  requirements.txt  service.yaml  setup.py
shagger/: shagger.py
src/: shagger.py  test.py  validation.py
src/shagger/: __init__.py  base.py  service.py  stub.py
tests/: test_shagger.py
